sorted/tests/25-parenthesized-sub-pattern-or.stderr
error: `(6 | 7)` should sort before `(8 | 9)`
 --> tests/25-parenthesized-sub-pattern-or.rs:9:19
  |
9 |         (8 | 9) | (6 | 7) => println!("6, 7, 8 or 9"),
  |                   ^^^^^^^
